--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.6.0",
     "nodemon": "^3.0.1",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "socket.io": "^4.7.2"
   },
   "name": "chatapp",
   "version": "1.0.0",
